Revert "Change iced crate version to git url"
This reverts commit 6b4540989929895154bfe3a49f68e466f8eb4647.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,8 +71,7 @@ iced_fonts = { path = "../iced_fonts" }
 [dependencies.iced]
 #git = "https://github.com/iced-rs/iced.git"
 #rev = "b474a2b7a763dcde6a377cb409001a7b5285ee8d"
-git = "https://github.com/videni/iced"
-branch = "master"
+path = "../iced"
 default-features = false
 features = ["advanced"]
 
@@ -86,8 +85,7 @@ rand = "0.8.5"            # For wrap example
 [dev-dependencies.iced]
 #git = "https://github.com/iced-rs/iced.git"
 #rev = "b474a2b7a763dcde6a377cb409001a7b5285ee8d"
-git = "https://github.com/videni/iced"
-branch = "master"
+path = "../iced"
 #default-features = false
 features = ["advanced", "wgpu"]
 
